--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- D3 JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/quakes.css">
+  <link rel="stylesheet" type="text/css" href="Leaflet-Part-2/static/css/quakes.css">
 </head>
 
 <body>
@@ -25,8 +25,8 @@
   <div id="mapid"></div>
   
   <!-- API Key -->
-  <script type="text/javascript" src="static/js/config.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-2/static/js/config.js"></script>
   <!-- JavaScript file -->
-  <script type="text/javascript" src="static/js/quakes.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-2/static/js/quakes.js"></script>
 </body>
 </html>
